--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,15 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS ON)
 
-# Enable clang-tidy linter
-set(CMAKE_CXX_CLANG_TIDY clang-tidy;-header-filter=.*;-checks=*;-warnings-as-errors=*;)
+# Compilation database is needed for static linter.
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+set(
+    CMAKE_CXX_CLANG_TIDY
+    clang-tidy;
+    -header-filter=.*;
+    -checks=-*,modernize-*,-modernize-use-trailing-return-type,-modernize-avoid-c-arrays,-modernize-type-traits;
+    -warnings-as-errors=*;)
 
 include_directories(.)
 include_directories(third_party/argparse/include/argparse)
@@ -80,5 +87,36 @@ endif()
 
 add_executable(simplify app/simplify.cpp)
 target_link_libraries(simplify argparse)
+
+# *********************************************************************************** #
+
+# =================================== CLANG-TIDY =================================== #
+
+#option(CMake_RUN_CLANG_TIDY "Run clang-tidy along the compiler." OFF)
+#if(CMake_RUN_CLANG_TIDY)
+#    if(CMake_SOURCE_DIR STREQUAL CMake_BINARY_DIR)
+#        message(FATAL_ERROR "CMake_RUN_CLANG_TIDY requires an out-of-source build!")
+#    endif()
+#
+#    find_program(CLANG_TIDY_COMMAND NAMES clang-tidy)
+#    if(NOT CLANG_TIDY_COMMAND)
+#        message(WARNING "CMake_RUN_CLANG_TIDY is ON but clang-tidy is not found!")
+#        set(CMAKE_CXX_CLANG_TIDY "" CACHE STRING "" FORCE)
+#    else()
+#        set(CLANG_TIDY_CHECKS "-*,modernize-*")
+#        set(CMAKE_CXX_CLANG_TIDY "${CLANG_TIDY_COMMAND};-checks=${CLANG_TIDY_CHECKS};-header-filter='${CMAKE_SOURCE_DIR}/src/*'")
+#    endif()
+#
+#    # Create a preprocessor definition that depends on .clang-tidy content so
+#    # the compile command will change when .clang-tidy changes.  This ensures
+#    # that a subsequent build re-runs clang-tidy on all sources even if they
+#    # do not otherwise need to be recompiled.  Nothing actually uses this
+#    # definition.  We add it to targets on which we run clang-tidy just to
+#    # get the build dependency on the .clang-tidy file.
+#    file(SHA1 ${CMAKE_CURRENT_SOURCE_DIR}/.clang-tidy clang_tidy_sha1)
+#    set(CLANG_TIDY_DEFINITIONS "CLANG_TIDY_SHA1=${clang_tidy_sha1}")
+#    unset(clang_tidy_sha1)
+#endif()
+#configure_file(.clang-tidy .clang-tidy COPYONLY)
 
 # *********************************************************************************** #
