--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,7 +78,7 @@ endif()
 
 # *********************************************************************************** #
 
-# =================================== PREPROCESSOR =================================== #
+# ===================================== SIMPLIFY ==================================== #
 
 add_executable(simplify app/simplify.cpp)
 target_link_libraries(simplify argparse)
