--- a/.github/workflows/csat_tests.yml
+++ b/.github/workflows/csat_tests.yml
@@ -62,3 +62,22 @@ jobs:
       - name: Run clang-format
         working-directory: ${{github.workspace}}
         run: find ./src/ -name '*.cpp' -o -name '*.hpp' | xargs clang-format --style="file:.clang-format" --dry-run
+
+  # Check if there are problems in code using linter
+  linter-check:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Install clang-format
+        run: sudo apt install -y clang-tidy
+
+      - name: Configure CMake
+        working-directory: ${{github.workspace}}
+        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+
+      - name: Run clang-tidy
+        working-directory: ${{github.workspace}}
+        run: clang-tidy ./src/**/*.* -p build/ --config-file=.clang-tidy
