--- a/.github/workflows/csat_tests.yml
+++ b/.github/workflows/csat_tests.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Run clang-format
         working-directory: ${{github.workspace}}
-        run: find ./src/ -name '*.cpp' -o -name '*.hpp' | xargs clang-format --style="file:.clang-format" --dry-run
+        run: find ./src/ -name '*.cpp' -o -name '*.hpp' | xargs clang-format --style="file:.clang-format" --dry-run -Werror
 
   # Check if there are problems in code using linter
   linter-check:
