--- a/.github/workflows/csat_tests.yml
+++ b/.github/workflows/csat_tests.yml
@@ -76,19 +76,15 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Update clang
-        run: sudo apt install --only-upgrade clang -y
+        run: sudo apt update -y && sudo apt upgrade -y
+
+      - name: Install clang-tidy
+        run: sudo apt install -y clang-tidy
 
       - name: Configure CMake
         working-directory: ${{github.workspace}}
         run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
-      - uses: ZedThree/clang-tidy-review@v0.19.0
-        id: review
-        with:
-          build_dir: ./build/
-          base_dir: ${{github.workspace}}
-          clang_tidy_version: "18"
-          exclude: "third_party/**/*"
-
-      - if: steps.review.outputs.total_comments > 0
-        run: exit 1
+      - name: Run clang-tidy
+        working-directory: ${{github.workspace}}
+        run: clang-tidy ./src/**/*.* -p build/ --config-file=.clang-tidy
