--- a/.github/workflows/csat_tests.yml
+++ b/.github/workflows/csat_tests.yml
@@ -51,7 +51,7 @@ jobs:
 
   # Check if there are files which need to be formatted.
   formatting-check:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     steps:
       - name: Checkout repository
@@ -65,7 +65,7 @@ jobs:
 
       - name: Run clang-format
         working-directory: ${{github.workspace}}
-        run: find ./src/ -name '*.cpp' -o -name '*.hpp' | xargs clang-format --style="file:.clang-format" --dry-run #-Werror
+        run: find ./src/ -name '*.cpp' -o -name '*.hpp' | xargs clang-format --style="file:.clang-format" --dry-run -Werror
 
   # Check if there are problems in code using linter
   linter-check:
